--- a/places.html
+++ b/places.html
@@ -9,7 +9,7 @@
 
 <header>
     <!-- <img src="https://www.clipartmax.com/png/middle/453-4538107_places-clipart-transparent-oh-the-places-you-ll-go-png.png" alt="Places Clipart Transparent - Oh The Places You Ll Go    -->
-    <img src="placesyouwillgo.jpg" alt="Places Clipart Transparent - Oh The Places You Ll Go">
+    <img src="placesyouwillgo.jpeg" alt="Places Clipart Transparent - Oh The Places You Will Go">
 </header>
 
   <main>
